--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "url": "git+https://github.com/daliannyvieira/blog.git"
   },
   "scripts": {
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "build": "gatsby build",
     "dev": "gatsby develop",
     "develop": "gatsby develop",
