--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-loader": "2.1.2",
     "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-react": "7.12.4",
+    "gh-pages": "^2.0.1",
     "lighthousebot": "https://github.com/GoogleChromeLabs/lighthousebot",
     "prettier": "1.16.4",
     "typescript": "3.3.3333",
