--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "url": "git+https://github.com/daliannyvieira/blog.git"
   },
   "scripts": {
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
+    "deploy": "gatsby build && gh-pages -d public -b master",
     "build": "gatsby build",
     "dev": "gatsby develop",
     "develop": "gatsby develop",
