--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dalianny vieira",
+  "name": "daliannyvieira",
   "private": true,
   "description": "Dali's personal blog",
   "version": "0.1.0",
@@ -19,6 +19,7 @@
     "gatsby-source-filesystem": "^2.2.2",
     "gatsby-transformer-remark": "^2.7.1",
     "gatsby-transformer-sharp": "^2.3.19",
+    "gh-pages": "^2.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -33,6 +34,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
+    "deploy": "gatsby build && gh-pages -d public -b master",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
