--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.0.0",
     "gatsby-image": "^3.7.1",
     "gatsby-plugin-manifest": "^3.7.1",
     "gatsby-plugin-offline": "^4.7.1",
     "gatsby-plugin-react-helmet": "^4.7.1",
     "gatsby-plugin-sharp": "^3.7.1",
+    "gatsby-plugin-styled-components": "^4.9.0",
     "gatsby-remark-images": "^5.4.1",
     "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-source-filesystem": "^3.7.1",
