--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "gatsby-plugin-sharp": "^3.7.1",
     "gatsby-plugin-styled-components": "^4.9.0",
     "gatsby-remark-images": "^5.4.1",
+    "gatsby-remark-prismjs": "^5.8.0",
     "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-source-filesystem": "^3.7.1",
     "gatsby-transformer-remark": "^4.4.1",
     "gatsby-transformer-sharp": "^3.7.1",
     "gh-pages": "^3.2.0",
+    "prismjs": "^1.24.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
